# wozzits-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  Since CMake determines the compiler at configure time, you must specify `clang-cl` when generating your build files  grammar.txt
TheWozzitsEngine/: CMakeLists.txt  DoNotCMakePresets.json  instructions.txt
TheWozzitsEngine/api/: filesystem.h  hormuz_0.h  logger.h  mpsc_queue.h  spsc_queue.h  window.h  window_types.h  wozzits_async.h  wozzits_time.h
TheWozzitsEngine/api/src/: engine.cpp  filesystem_os.cpp  hormuz_0.cpp  logger.cpp  window.cpp  wozzits_async.cpp  wozzits_memory.cpp  wozzits_threading.cpp
TheWozzitsEngine/platform/: CMakeLists.txt  MPSC-queue.h  assert.h  logging.h
TheWozzitsEngine/platform/src/: logging.cpp
TheWozzitsEngine/src/: CMakeLists.txt  logging-shared.h
TheWozzitsEngine/src/core/: logger_worker.h
TheWozzitsEngine/src/core/impl/: logger_worker.cpp  sinks.h  wozzits_core_threading.cpp
TheWozzitsEngine/src/platform/: win32.h
TheWozzitsEngine/src/platform/src/: win32.cpp
TheWozzitsEngine/tests/: file_test_harness.h  test_engine.cpp  test_hormuz_0.cpp  test_logging.cpp  test_mpsc_queue.cpp  test_spsc_queue.cpp  test_threading.cpp  test_window.cpp  test_wozzits_time.cpp  thread_test_harness.h
TheWozzitsEngine/tests/platform/: test_mpsc_queue.cpp
TheWozzitsEngine/tests/platform/logging/: instructions.txt  test_logging.cpp
Wozzits/: grammar.py  parser.py
docs/: architecture.md  contracts.md  engine_rules.md
tests/: test_parser.py
twe/: CMakeLists.txt
twe/api/wozzits/: engine.h  event.h  filesystem.h  hormuz_0.h  input.h  logger.h  math.h  memory.h  mpsc_queue.h  mpsc_ring_buffer.h  result.h  spsc_queue.h  threading.h  time.h  w_time.h  window.h  window2.h  window_types.h
twe/core/: CMakeLists.txt
twe/core/algo/: algo.h  next.h  ops.h  pipeline.h
twe/core/containers/: buffer.h
twe/core/input/: raw_input.cpp
twe/core/math/: w_math.h
twe/core/queue/: mpsc_queue copy.h  mpsc_queue.h  mpsc_ring_buffer.h  spsc_queue.h
twe/core/render/: frame.cpp  frame.h  render.h  render_debug.h  submit.cpp  submit.h
twe/core/utilities/: wozassert.h
twe/core/window/: window2.cpp
twe/include/wozzits/math/: camera.h  compare.h  frustum.h  mat4.h  math_types.h  projection.h  quaternion.h  transform.h  vec3.h
twe/include/wozzits/scene/: bake.h  scene.h  transform_node.h
twe/platform/: CMakeLists.txt
twe/platform/win32/: CMakeLists.txt  platform_event.h  raw_input.h  ri_win32.cpp  ri_win32.h  w_time.cpp  w_time.h  win32.cpp  win32.h  win32copy.cpp  win32copy.h
twe/src/: CMakeLists.txt
twe/src/async/: CMakeLists.txt  async.cpp
twe/src/engine/: CMakeLists.txt  engine.cpp
twe/src/event/: CMakeLists.txt  event.cpp
twe/src/filesystem/: CMakeLists.txt  filesystem.cpp  result.h
twe/src/hormuz/: CMakeLists.txt  hormuz_0.cpp
twe/src/input/: CMakeLists.txt  input.cpp
twe/src/logging/: CMakeLists.txt  logger.cpp  logger_worker.cpp  logger_worker.h  logging.h  sinks.h
twe/src/math/: CMakeLists.txt  compare.cpp  frustum.cpp  mat4.cpp  quaternion.cpp  vec3.cpp
twe/src/memory/: CMakeLists.txt  memory.cpp
twe/src/scene/: CMakeLists.txt  bake.cpp  transform_node.cpp
twe/src/threading/: CMakeLists.txt  threading.cpp
twe/src/time/: CMakeLists.txt  time.cpp  w_time.cpp
twe/src/window/: CMakeLists.txt  window.cpp
twe/tests/: CMakeLists.txt  engine.cpp  file_0.cpp  file_test_harness.h  frame_builder_tests.cpp  hormuz_0.cpp  logging.cpp  mpsc_queue.cpp  mpsc_ring_buffer.cpp  spsc_queue.cpp  test_window.cpp  threading.cpp  threading_test_harness.h  time.cpp  window.cpp
twe/tests/algo/: algo_test_1.cpp  algo_test_next.cpp  algo_test_pipeline.cpp
twe/tests/containers/: buffer.cpp  buffer_2.cpp  buffer_spec_test.cpp  mpsc_ring_buffer.cpp  spsc_queue.cpp  spsc_test_harness.h
twe/tests/math/: algo_math_spec.cpp  test_camera.cpp  test_mat4.cpp  test_quaternion.cpp  test_quaternion_mat4.cpp  test_vec3.cpp
twe/tests/render/: frame_builder_tests.cpp
twe/tests/scene/: transform_node_test.cpp
